tests/tooling/fixtures/native/recovery/negative/negative_misplaced_qualifier_after_name_fn_pure.objc3
// Negative fixture: declaration qualifiers are not allowed between function name and parameter list.
// Expected diagnostic code(s): O3P100.
module NegativeMisplacedQualifierAfterNameFnPure;

fn add pure(lhs: i32, rhs: i32) -> i32;

fn main() -> i32 {
  return 0;
}
